@@ -33,25 +33,32 @@ Alt="Baby Linux Logo" Height=77 Width=65></TD>
 Home |
 </P>
 
+<CENTER>
 <HR Width=90%>
 
-<H1 Align=Center>What is ELKS?</H1>
+<TABLE>
+<TD Width=20% Align=Left VAlign=Top></TD>
+<TD Width=60% Align=Left VAlign=Top>
+<H1 Align=Center>Latest News</H1>
 
-<HR Width=90%>
+<UL>
 
-<H1 Align=Center>Latest News !!!</H1>
+<LI><P Align=Justify><B>24 Nov 2001</B>ELKS 0.1.0-pre2 released!!!</P>
 
-<OL>
-
+<P Align=Justify>The new prerelease is out for download. It contains some
+significant bug fixes.</P>
 <LI><P Align=Justify><B>20 Nov 2001</B>ELKS 0.1.0-pre1 released!!!</P>
 
 <P Align=Justify>The ELKS kernel is now considered to be ready to progress
 to the next stage of development. Accordingly, the developers have
 released version 0.1.0-pre1 thereof.</P>
 
-</OL>
-
+</UL>
+</TD>
+<TD Width=20% Align=Left VAlign=Top></TD>
+</TABLE>
 <HR Width=90%>
+</CENTER>
 
 <P Align=Center>This document is released under the terms of the
 <A HRef="http://www.fsf.org/licenses/gpl.html">GNU General Public
